--- a/src/app/page/admin/admin.component.html
+++ b/src/app/page/admin/admin.component.html
@@ -2,36 +2,10 @@
 
 
 
+<app-productos-servicios></app-productos-servicios>
 
 
 
-
-<div class="container">
-    <table class="table">
-      <thead>
-        <tr>
-          <th>Id</th>
-          <th>email</th>
-          <th>roll</th>
-          <th>contraseña</th>
-        </tr>
-      </thead>
-      <tbody>
-        @for(item of personas; track item) {
-        <tr>
-          <td>{{item.id}}</td>
-          <td>{{item.email}}</td>
-          <td>{{item.rol}}</td>
-          <td>{{item.password}}</td>
-           <td>
-            <button [routerLink]="['/editar',item.id]">Editar</button>
-            <button  (click)="eliminar(item.id)">Eliminar</button>
-           </td> 
-        </tr>
-        }
-      </tbody>
-    </table>
-  </div>
 
   <td>
     <button [routerLink]="['/registro']" class="btn btn-info">Nuevo Usuairio</button>
