--- a/src/app/page/cliente/cliente.component.html
+++ b/src/app/page/cliente/cliente.component.html
@@ -46,8 +46,14 @@
             </tbody>
         </table>
         <button (click)="limpiarCarrito()" class="boton-limpiar">Limpiar Carrito</button> 
+        <button (click)="comprar()" class="button-comprar">Comprar</button>
     </div>
 
-    <button (click)="logaut()">salir</button>
+    <div>
+      <button (click)="logaut()" class="button-eliminar">salir</button>
+
+    </div>
+
+   
     
       
